--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,22 @@ body {
   scrollbar-width: none;
 }
 
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+}
+
 .site-wrapper {
+  max-width: 50vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  border: 1px solid black;
+  background-color: white;
 }
 
 header {
